@@ -27,6 +27,8 @@ For a detailed list of all changes see the file CHANGELOG.
           signals if the error is caught or not.
 
     - Fixed Crashers:
+       + An error during the fatal() processing will be treated
+         as a double-fatal.
 
     - Language:
        + foreach(): When looping over a mapping with no values, or with
