@@ -15,6 +15,8 @@ See the file HISTORY for a user-oriented summary of all the changes.
   - (efuns.c) Efun md5() can now hash arrays of numbers as well (Bug #411).
   - (xalloc.c, smalloc.c) The string_copy() function checks if the requested
       memory is actually allocated, throwing an error if not (Bug #397).
+  - (simulate.c) Errors during the processing of a fatal() will be
+      recognized and treated as double-fatal (Bug #408).
 
 19-Oct-2005 (Lars Duening)
   - (pkg-tls.c) tls_check_certificate() now returns the low-level API
